# c-pluff

./: .cproject  .gitignore  .project  BUILD.txt  COPYRIGHT.txt  ChangeLog  ChangeLog.txt  INSTALL.txt  Makefile.am  README.txt  Roadmap.txt  autogen.sh  configure.ac
c-pluff/: .cdtproject  .project  COPYRIGHT.txt  Makefile.am  autogen.sh  configure.ac  context.c  context.h  core.c  core.h  cpluff.h  defines.h  framework.c  pcontrol.c  pcontrol.h  ploader.c  plugin.c  plugin.h  plugin.xsd  strdup.c  testmain.c  testpcontrol.c  testploader.c  thread.c  thread.h  thread_posix.c  thread_windows.c  util.c  util.h
c-pluff/console/: Makefile.am  cmdinput_basic.c  cmdinput_readline.c  console.c  console.h
c-pluff/kazlib/: hash.c  hash.h  list.c  list.h
c-pluff/libcpluff/: Doxyfile-impl.in  Doxyfile-ref.in  Makefile.am  context.c  context.h  cpluff.c  cpluff.h  cpluff.h.in  cpluffdef.h.in  defines.h  internal.h  logging.c  pcontrol.c  pcontrol.h  pinfo.c  ploader.c  pscan.c  psymbol.c  refdoc.dox  serial.c  thread.h  thread_posix.c  thread_windows.c  util.c  util.h
c-pluff/loader/: Makefile.am  loader.c
c-pluff/tags/0.1.0/: .project  BUILD.txt  COPYRIGHT.txt  configure.ac
c-pluff/tags/0.1.0/doc/: .htaccess  Makefile.am  index.en.html
c-pluff/tags/0.1.0/libcpluff/: Doxyfile-ref.in  refdoc.dox
c-pluff/tags/0.1.1/: .cdtproject
c-pluff/tags/0.1.1/doc/: copyright.en.html  cpluff_style.css  index.en.html
c-pluff/tags/0.1.1/examples/cpfile/: README.txt  cpfile.in
c-pluff/tags/0.1.1/examples/cpfile/plugins/: Makefile.am
c-pluff/tags/0.1.1/libcpluff/: Makefile.am  cpluff.h  psymbol.c
c-pluff/tags/0.1.2/: ChangeLog.txt  Makefile.am  configure.ac
c-pluff/tags/0.1.2/console/: console.c
c-pluff/tags/0.1.2/debian/: rules
c-pluff/tags/0.1.2/doc/: Makefile.am  copyright.en.html  cpluff_style.css
c-pluff/tags/0.1.2/examples/: INSTALL.txt  Makefile.am
c-pluff/tags/0.1.2/examples/cpfile/: Makefile.am
c-pluff/tags/0.1.2/libcpluff/: Makefile.am  cpluff.c  pcontrol.c  thread_windows.c
c-pluff/tags/0.1.2/loader/: Makefile.am
c-pluff/tags/0.1.2/po/: fi.po
c-pluff/tags/0.1.3/: .project
c-pluff/tags/0.1.3/debian/: copyright  libcpluff0.install
c-pluff/tags/0.1.3/ports/debian-mingw/: build
c-pluff/tags/0.1.3/ports/debian-mingw/debian/: changelog  cpluff-examples-mingw.install  cpluff-mingw.install  rules
c-pluff/tags/0.1.3/ports/debian-mingw/windist/: makedist
c-pluff/test/: Makefile.am  collections.c  cpinfo.c  extcfg.c  fatalerror.c  initdestroy.c  loggers.c  pcallbacks.c  pdependencies.c  pinstallation.c  ploading.c  plugin.xml  pscanning.c  test-extensions  test-extpoints  test-fatalerrordefault  test-fatalerrorreset  test-loadmaximal  test-loadminimal  test.h  testmain.c  tests.txt
c-pluff/test/plugins-source/: Makefile.am
c-pluff/test/plugins-source/callbackcounter/: Makefile.am  callbackcounter.c  callbackcounter.h
c-pluff/trunk/: .cproject  .project  BUILD.txt  ChangeLog  INSTALL.txt  Makefile.am  Roadmap.txt  autogen.sh  configure.ac
c-pluff/trunk/console/: cmdinput_basic.c
c-pluff/trunk/debian/: changelog  control  cpluff-doc.install  libcpluff0-dev.install  rules
c-pluff/trunk/doc/: .htaccess  Makefile.am  common_style.css  copyright.en.html  cpluff_style.css  download.en.html  index.en.html  lists.en.html
c-pluff/trunk/docsrc/: doxygen.footer
c-pluff/trunk/examples/: INSTALL.txt  Makefile.am  common.nmake
c-pluff/trunk/examples/cpfile/: Makefile.am  README.txt  cpfile.in
c-pluff/trunk/examples/cpfile/plugins/: Makefile.am
c-pluff/trunk/examples/cpfile/plugins/cext/: Makefile.am
c-pluff/trunk/examples/cpfile/plugins/core/: core.c  (+4 more)
c-pluff/trunk/libcpluff/: Doxyfile-ref.in  Makefile.am  context.c  cpluff.c  cpluff.h  cpluffdef.h.in  internal.h  mainpage.dox  mainprog.dox  pcontrol.c  pdescriptor.c  pinfo.c  ploader.c  plugin.dox  pscan.c  psymbol.c
c-pluff/trunk/libcpluff/dox/: refdoc.dox
c-pluff/trunk/libcpluffxx/: CPFramework.cc  CPFrameworkImpl.cc  CPPluginContainerImpl.cc  CPPluginContextImpl.cc  CPReferenceCountedImpl.cc  Makefile.am  cpluffxx.h  framework.cc  info.cc  internalxx.h  plugin_container_impl.cc  plugin_context_impl.cc  util.cc  util.h
c-pluff/trunk/libcpluffxx/cpluffxx/: Makefile.am  callbacks.h  defines.h  except.h  info.h  sharedptr.h.in
c-pluff/trunk/libcpluffxx/docsrc/: Doxyfile-ref.in
c-pluff/trunk/loader/: loader.c
c-pluff/trunk/po/: ChangeLog  POTFILES.in  fi.po
c-pluff/trunk/ports/debian-mingw/: build
c-pluff/trunk/ports/debian-mingw/debian/: changelog  control  copyright  cpfile.bat  install
c-pluff/trunk/ports/debian-mingw/windist/: README.dist.txt  README.txt  makedist
c-pluff/trunk/test/: Makefile.am  cpinfo_cxx.cc  fatalerror_cxx.cc  initdestroy_cxx.cc  ploaders.c  test_cxx.cc  test_cxx.h  tests.txt  tests_cxx.txt
c-pluff/trunk/test/plugins-source/symprovider/: Makefile.am  plugin.xml
c-pluff/trunk/test/plugins-source/symuser/: Makefile.am  symuser.c
c-pluff/trunk/windows/: rules
doc/: Makefile.am  copyright.en.html  cpluff_style.css  download.en.html  index.en.html  lists.en.html  repository.en.html
doc/listconfirm/: alreadyon.en.php  confirm.en.php  invalid.en.php  noton.en.php  subscribed-announcement.en.php  unsubscribed-announcement.en.php
examples/: INSTALL.txt  Makefile.am  autogen.sh  configure.ac
examples/cpfile/: .gitignore  Makefile.am  README.txt  cpfile.in
examples/cpfile/plugins/cext/: Makefile.am
examples/cpfile/plugins/core/: Makefile.am  core.c
examples/cpfile/plugins/extension/: Makefile.am  plugin.xml
examples/cpfile/plugins/special/: Makefile.am  special.c
libcpluffxx/: CPAPIErrorImpl.cc  CPFramework.cc  CPFrameworkImpl.cc  CPPluginContainerImpl.cc  CPPluginContextImpl.cc  CPPluginDescriptorImpl.cc  CPPluginImportImpl.cc  Makefile.am  README.txt  cpluffxx.h  framework.cc  framework_impl.cc  info.cc  internalxx.h  libcpluffxx.pc.in  plugin_container.cc  plugin_container_impl.cc  util.cc
libcpluffxx/cpluffxx/: .gitignore  callbacks.h  defines.h.in  enums.h  except.h  info.h  sharedptr.h.in
libcpluffxx/docsrc/: .gitignore  Doxyfile-ref.in
(+77 files in other folders)
