## Process this file with automake to produce Makefile.in.

# Copyright 2007 Johannes Lehtinen
# This Makefile is free software; Johannes Lehtinen gives unlimited
# permission to copy, distribute and modify it.

SUBDIRS = cpfile

EXTRA_DIST = autogen.sh configure.ac

examples: all

examples-install: install

.PHONY: examples examples-install
